force-app/main/default/objects/Part_Request__c/Part_Request__c.object-meta.xml
<CustomObject>
    <label>Part Request</label>
    <nameField>
        <displayFormat>PR-{00}</displayFormat>
        <label>Part Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>