force-app/main/default/objects/Part_Request__c/fields/Free_of_charge__c.field-meta.xml
<CustomField>
    <fullName>Free_of_charge__c</fullName>
    <label>Free of Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>