force-app/main/default/objects/Part_Request__c/fields/Material_costs__c.field-meta.xml
<CustomField>
    <fullName>Material_costs__c</fullName>
    <formula>Part_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>