force-app/main/default/objects/Part_Request__c/fields/Old_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Part_Number__c</fullName>
    <label>Old Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>