force-app/main/default/objects/Part_Request__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Part Number</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Parts Request</relationshipLabel>
    <relationshipName>Parts_Request</relationshipName>
    <type>Lookup</type>
</CustomField>