force-app/main/default/objects/Part_Request__c/fields/Part_Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Part_Request_Date_Time__c</fullName>
    <label>Part Request Date Time</label>
    <type>DateTime</type>
</CustomField>