force-app/main/default/objects/Part_Request__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Parts Request</relationshipLabel>
    <relationshipName>Parts_Request</relationshipName>
    <type>Lookup</type>
</CustomField>