force-app/main/default/objects/Part_Request__c/fields/SOA__c.field-meta.xml
<CustomField>
    <fullName>SOA__c</fullName>
    <label>SOA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>