force-app/main/default/objects/Part_Request__c/fields/VOR__c.field-meta.xml
<CustomField>
    <fullName>VOR__c</fullName>
    <label>VOR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>