force-app/main/default/objects/Part_Request__c/fields/Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Claim</label>
    <referenceTo>Warranty_Claim__c</referenceTo>
    <relationshipLabel>Parts Request</relationshipLabel>
    <relationshipName>Parts_Request</relationshipName>
    <type>Lookup</type>
</CustomField>